fixed issue 19647 - Backend Marketing Store View Specific Labels Options Label not aligned

--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -3501,6 +3501,16 @@
         margin-bottom: 29px;
     }
 
+    #rule_store_labels_fieldset {
+        .tree-store-scope.admin__fieldset>.admin__field {
+            margin: 0;
+
+            label:before {
+                content: none;
+            }
+        }
+    }
+
     //
     //  Product Image Placeholders
     //  --------------------------------------
